--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,8 @@
    "outputs": [],
    "source": [
     "def avenue_distance(first_neighbor, second_neighbor):\n",
-    "    pass"
+    "        ave_distance = first_neighbor['avenue'] - second_neighbor['avenue']\n",
+    "    return ave_distance\n"
    ]
   },
   {
