--- a/index.ipynb
+++ b/index.ipynb
@@ -302,14 +302,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors_squared(first_neighbor, second_neighbor):\n",
-    "    streetI"
+    "    total_distance = street_distance(first_neighbor,second_neighbor)**2 + avenue_distance(first_neighbor,second_neighbor)**2\n",
+    "    return total_distance"
    ]
   },
   {
