--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance_dict = dict('avenue'= second_ne,)"
+    "    distance_dict = dict('avenue'= second_neighbor[,)"
    ]
   },
   {
