--- a/index.ipynb
+++ b/index.ipynb
@@ -450,7 +450,7 @@
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance_dict = dict('avenue'= second_neighbor['avenue'],'distance'= distance(first_neighbor, second_neighbor), 'name'= second_neighbor['name'], 'street'= second_)"
+    "    distance_dict = dict('avenue'= second_neighbor['avenue'],'distance'= distance(first_neighbor, second_neighbor), 'name'= second_neighbor['name'], 'street'= second_neighbor['street'])"
    ]
   },
   {
