--- a/index.ipynb
+++ b/index.ipynb
@@ -442,16 +442,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-18-0d7533c223f4>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-0d7533c223f4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    distance_dict = dict('avenue'= second_neighbor['avenue'],'distance'= distance(first_neighbor, second_neighbor), 'name'= second_neighbor['name'], 'street'= second_neighbor['street'])\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
     "    distance_dict = dict('avenue'= second_neighbor['avenue'],'distance'= distance(first_neighbor, second_neighbor), 'name'= second_neighbor['name'], 'street'= second_neighbor['street'])\n",
-    "    "
+    "    return distance_dict"
    ]
   },
   {
