--- a/index.ipynb
+++ b/index.ipynb
@@ -442,40 +442,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (<ipython-input-18-0d7533c223f4>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-0d7533c223f4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    distance_dict = dict('avenue'= second_neighbor['avenue'],'distance'= distance(first_neighbor, second_neighbor), 'name'= second_neighbor['name'], 'street'= second_neighbor['street'])\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "def distance_with_neighbor(first_neighbor, second_neighbor):\n",
-    "    distance_dict = dict('avenue'= second_neighbor['avenue'],'distance'= distance(first_neighbor, second_neighbor), 'name'= second_neighbor['name'], 'street'= second_neighbor['street'])\n",
+    "    distance_dict = {'avenue': second_neighbor['avenue'], 'distance': distance(\n",
+    "        first_neighbor, second_neighbor), 'name': second_neighbor['name'], 'street': second_neighbor['street']}\n",
     "    return distance_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'distance_with_neighbor' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-7ba4e7a308bf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdistance_with_neighbor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnatalie\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# {'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'distance_with_neighbor' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'avenue': 5, 'distance': 4.123105625617661, 'name': 'Natalie', 'street': 4}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
