--- a/index.ipynb
+++ b/index.ipynb
@@ -490,7 +490,7 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    pass"
+    "    if first"
    ]
   },
   {
