Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -490,7 +490,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    for neighbor in neighbors"
+    "    return_list\n",
+    "    for neighbor in neighbors:\n",
+    "        if "
    ]
   },
   {
