Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -490,9 +490,9 @@
    "outputs": [],
    "source": [
     "def distance_all(first_neighbor, neighbors):\n",
-    "    return_list\n",
+    "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if "
+    "        if first"
    ]
   },
   {
