Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if first"
+    "        if first_neighbor != "
    ]
   },
   {
