--- a/index.ipynb
+++ b/index.ipynb
@@ -492,7 +492,8 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if first_neighbor != "
+    "        if first_neighbor != neighbor:\n",
+    "            "
    ]
   },
   {
