Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,7 @@
     "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
     "        if first_neighbor != neighbor:\n",
-    "            neigbor_distance = dista"
+    "            neigbor_distance = distance_with_neighbor"
    ]
   },
   {
