Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -493,7 +493,8 @@
     "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
     "        if first_neighbor != neighbor:\n",
-    "            neigbor_distance = distance_with_neighbor(first_neigh)"
+    "            neigbor_distance = distance_with_neighbor(first_neighbor, neighbor)\n",
+    "            "
    ]
   },
   {
