Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -494,7 +494,7 @@
     "    for neighbor in neighbors:\n",
     "        if first_neighbor != neighbor:\n",
     "            neigbor_distance = distance_with_neighbor(first_neighbor, neighbor)\n",
-    "            "
+    "            return_list.append()"
    ]
   },
   {
