Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,7 @@
     "        if first_neighbor != neighbor:\n",
     "            neigbor_distance = distance_with_neighbor(first_neighbor, neighbor)\n",
     "            return_list.append(neighbor_distance)\n",
-    "            "
+    "    return return_list"
    ]
   },
   {
