Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -490,7 +490,7 @@
     "def distance_all(first_neighbor, neighbors):\n",
     "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
-    "        if not first_neighbor == neighbor:\n",
+    "        if not first_neighbor = neighbor:\n",
     "            neigbor_distance = distance_with_neighbor(first_neighbor, neighbor)\n",
     "            return_list.append(neighbor_distance)\n",
     "    return return_list"
