Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -491,7 +491,7 @@
     "    return_list=[]\n",
     "    for neighbor in neighbors:\n",
     "        if first_neighbor != neighbor:\n",
-    "            neigbor_distance = distance_with_neighbor(first_neighbor, neighbor)\n",
+    "            neighbor_distance = distance_with_neighbor(first_neighbor, neighbor)\n",
     "            return_list.append(neighbor_distance)\n",
     "    return return_list"
    ]
